Bug 498848 - The "Fall Apart" desktop effect is triggered too frequently, for windows the user doesn't consider windows
Summary: The "Fall Apart" desktop effect is triggered too frequently, for windows the ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.2.90
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-18 14:40 UTC by John
Modified: 2025-01-29 23:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John 2025-01-18 14:40:37 UTC
SUMMARY
The "Fall Apart" desktop effect is triggered too loose (for too  many cases).

STEPS TO REPRODUCE
1. Boot KDE Neon.
2. Go to System Settings -> Desktop Effects.
3. Enable the "Fall Apart" one and click Apply.
4. Logout and login from KDE Neon.
5. Drag some windows to the left, top, right margin of the screen and release the mouse button so they snap

OBSERVED RESULT
1. The effect is triggered for both logout and login animation.
2. The effect is triggered for all the windows snapping / tiling / maximizing.

EXPECTED RESULT
The effect should be triggered just for windows that are closed normally or abnormally (killed programs too if possible).

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
KDE Plasma Version: 6.2.90
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.1
Kernel Version: 6.8.0-51-generic (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Hardware: Laptop Dell Inspiron 5770
Graphics Processor 1: Mesa Intel® UHD Graphics 620 (main)
Graphics Processor 2: AMD Radeon R5 M465 Series

Not sure how this FIXED bug report is similar to mine of it it's any help:
https://bugs.kde.org/show_bug.cgi?id=405971
This FIXED (both in status and last comment) bug report, says that it should not occur anymore, but it does (at least for me):
https://bugs.kde.org/show_bug.cgi?id=444166

And if we had a similar cool effect like "Fall Apart" for closing windows, then it would be fine / nice to use the current "Fall Apart" effect for programs that had crashed or have been killed, like this bug report I think it suggests:
https://bugs.kde.org/show_bug.cgi?id=475475
It would make more sense and it would be more intuitive to understand what just happened to some program.
But since there's no other nice effect similar to this one, I prefer to use this one for normally closing windows.

Warning: Do no try to snap windows to screen corners with this effect enabled as will make Plasma freeze completely!
I'll write another bug report about that soon.
Comment 1 John 2025-01-18 15:12:27 UTC
And here's the bug with the Plasma session freezing, when this effect is on and windows are dragged towards and outwards of the screen corners:
https://bugs.kde.org/show_bug.cgi?id=498849
Comment 2 Nate Graham 2025-01-21 20:04:44 UTC
I can reproduce it triggering when dismissing the logout screen. Cannot reproduce for window tiling/snapping/maximizing actions.
Comment 3 Bug Janitor Service 2025-01-29 14:16:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7087
Comment 4 Vlad Zahorodnii 2025-01-29 17:04:00 UTC
Git commit 211fd13d34d6694cc2ff993f465a83b8b6bb48aa by Vlad Zahorodnii.
Committed on 29/01/2025 at 16:20.
Pushed by vladz into branch 'master'.

plugins/fallapart: Ignore window outline

M  +3    -0    src/plugins/fallapart/fallapart.cpp

https://invent.kde.org/plasma/kwin/-/commit/211fd13d34d6694cc2ff993f465a83b8b6bb48aa
Comment 5 Vlad Zahorodnii 2025-01-29 17:53:29 UTC
Git commit 334eeee66b72ffd1bbafa70eb83f2b4679260f27 by Vlad Zahorodnii.
Committed on 29/01/2025 at 17:05.
Pushed by vladz into branch 'Plasma/6.3'.

plugins/fallapart: Ignore window outline


(cherry picked from commit 211fd13d34d6694cc2ff993f465a83b8b6bb48aa)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +3    -0    src/plugins/fallapart/fallapart.cpp

https://invent.kde.org/plasma/kwin/-/commit/334eeee66b72ffd1bbafa70eb83f2b4679260f27