plugins/fallapart: Ignore window outline

BUG: 498848